crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_doubles_over_singles_would_be_triple_quotes.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
Q000 Single quotes found but double quotes preferred
 --> singles_would_be_triple_quotes.py:1:5
  |
1 | s = ''"Start with empty string" ' and lint docstring safely'
  |     ^^
2 | s = 'Do not'" start with empty string" ' and lint docstring safely'
  |
help: Replace single quotes with double quotes

Q000 [*] Single quotes found but double quotes preferred
 --> singles_would_be_triple_quotes.py:1:33
  |
1 | s = ''"Start with empty string" ' and lint docstring safely'
  |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
2 | s = 'Do not'" start with empty string" ' and lint docstring safely'
  |
help: Replace single quotes with double quotes
  |
1 - s = ''"Start with empty string" ' and lint docstring safely'
1 + s = ''"Start with empty string" " and lint docstring safely"
  |

Q000 [*] Single quotes found but double quotes preferred
 --> singles_would_be_triple_quotes.py:2:5
  |
1 | s = ''"Start with empty string" ' and lint docstring safely'
2 | s = 'Do not'" start with empty string" ' and lint docstring safely'
  |     ^^^^^^^^
help: Replace single quotes with double quotes
  |
2 - s = 'Do not'" start with empty string" ' and lint docstring safely'
2 + s = "Do not"" start with empty string" ' and lint docstring safely'
  |

Q000 [*] Single quotes found but double quotes preferred
 --> singles_would_be_triple_quotes.py:2:40
  |
1 | s = ''"Start with empty string" ' and lint docstring safely'
2 | s = 'Do not'" start with empty string" ' and lint docstring safely'
  |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace single quotes with double quotes
  |
2 - s = 'Do not'" start with empty string" ' and lint docstring safely'
2 + s = 'Do not'" start with empty string" " and lint docstring safely"
  |
