crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_singles_over_doubles.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
Q000 [*] Double quotes found but single quotes preferred
 --> doubles.py:1:25
  |
1 | this_should_be_linted = "double quote string"
  |                         ^^^^^^^^^^^^^^^^^^^^^
2 | this_should_be_linted = u"double quote string"
3 | this_should_be_linted = f"double quote string"
  |
help: Replace double quotes with single quotes
  |
1 - this_should_be_linted = "double quote string"
1 + this_should_be_linted = 'double quote string'
  |

Q000 [*] Double quotes found but single quotes preferred
 --> doubles.py:2:25
  |
1 | this_should_be_linted = "double quote string"
2 | this_should_be_linted = u"double quote string"
  |                         ^^^^^^^^^^^^^^^^^^^^^^
3 | this_should_be_linted = f"double quote string"
4 | this_should_be_linted = f"double {'quote'} string"
  |
help: Replace double quotes with single quotes
  |
2 - this_should_be_linted = u"double quote string"
2 + this_should_be_linted = u'double quote string'
  |

Q000 [*] Double quotes found but single quotes preferred
 --> doubles.py:3:25
  |
1 | this_should_be_linted = "double quote string"
2 | this_should_be_linted = u"double quote string"
3 | this_should_be_linted = f"double quote string"
  |                         ^^^^^^^^^^^^^^^^^^^^^^
4 | this_should_be_linted = f"double {'quote'} string"
  |
help: Replace double quotes with single quotes
  |
3 - this_should_be_linted = f"double quote string"
3 + this_should_be_linted = f'double quote string'
  |
