crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_singles_over_doubles_multiline_string.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
Q001 [*] Double quote multiline found but single quotes preferred
 --> doubles_multiline_string.py:1:5
  |
1 |   s = """ This "should"
  |  _____^
2 | | be
3 | | "linted" """
  | |____________^
4 |
5 |   s = ''' This "should"
  |
help: Replace double multiline quotes with single quotes
  |
1 ~ s = ''' This "should"
2 + be
3 + "linted" '''
  |
